--- a/fragrances.ipynb
+++ b/fragrances.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fragrance cluster analysis"
+    "# Fragrance clustering"
    ]
   },
   {
